# jupyter-tikz

./: Makefile  README.md  main.py  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: python-tests.yml
docs/: api.md  index.md  installation.md
docs/about/: changelog.md
docs/notebooks/: Enhancements.ipynb
docs/templates/: notebook-download.md
docs/usage/: as-magic.md  as-package.md  troubleshooting.md
jupyter_tikz/: __init__.py  args.py  canvas_frame.py  crop.py  errors.py  executor.py  jupyter_tikz.py  legacy_render.py  magic.py  models.py  naming.py  paths.py  save_paths.py  svg_box.py  svg_normalize.py  toolchains.py
notebooks/: GettingStarted.ipynb
notebooks/outputs/: angle.tex  angle.tikz
tests/: conftest.py  test_args.py  test_canvas_frame_file.py  test_crop_svg.py  test_default_toolchain_fast_defaults.py  test_diagnostics_contract.py  test_executor.py  test_failure_artifacts.py  test_help_snapshot.py  test_keep_file.py  test_magic_params.py  test_module_facade.py  test_option_resolution_and_cache.py  test_padding_options.py  test_postprocess_order.py  test_render_svg.py  test_run_latex.py  test_run_toolchain.py  test_save.py  test_save_paths.py  test_svg_normalize.py  test_svg_output_canonicalization.py  test_svg_output_normalization.py  test_toolchains.py  test_version.py
tests/goldens/: test_render_svg_golden.py
tests/snapshots/: tikz_magic_help.txt
