[tool.poetry]
name = "jupyter-tikz"
version = "0.5.8"
description = "IPython Magics for rendering TeX/TikZ in Jupyter Notebooks"
license = "MIT"
authors = ["lucaslrodri"]
readme = "README.md"
packages = [{ include = "jupyter_tikz" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Framework :: IPython",
    "Framework :: Jupyter",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Text Processing :: Markup :: LaTeX",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Homepage" = "https://jupyter-tikz.readthedocs.io/"
"Documentation" = "https://jupyter-tikz.readthedocs.io/"
"Repository" = "https://github.com/lucaslrodri/jupyter-tikz/"
"Tracker" = "https://github.com/lucaslrodri/jupyter-tikz/issues/"


[tool.poetry.dependencies]
python = "^3.10"
jinja2= "^3"
ipython = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
isort = "^5.13.2"
black = "^24.4.2"
taskipy = "^1.13.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.9.10"
mypy = "^1.15.0"

[tool.poetry.group.doc.dependencies]
mkdocs = "~1.6.0"
mkdocstrings = { extras = ["python"], version = "~0.25.1" }
jinja2 = "~3.1.4"
mkdocs-macros-plugin = "~1.0.5"
mkdocs-material = {extras = ["imaging"], version = "^9.5.30"}

[tool.pytest.ini_options]
#pythonpath = "./jupyter_tikz"
markers = [
    "needs_latex: marks tests that require a LaTeX environment with the TikZ package installed.",
    "needs_pdftocairo: marks tests that require `pdftocairo` (Poppler) installed.",
    "needs_lualatex: marks tests that require a working lualatex engine.",
]
# addopts = '-m "not needs_latex and not needs_pdftocairo"'
# addopts = "--no-cov"

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E9", "F", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true

[tool.taskipy.tasks]
fmt = "black jupyter_tikz tests && isort jupyter_tikz tests"
lint = "task fmt"
lint_check = "ruff check jupyter_tikz/args.py jupyter_tikz/errors.py jupyter_tikz/executor.py jupyter_tikz/magic.py jupyter_tikz/naming.py jupyter_tikz/paths.py jupyter_tikz/save_paths.py jupyter_tikz/toolchains.py"
type_check = "mypy jupyter_tikz/args.py jupyter_tikz/errors.py jupyter_tikz/executor.py jupyter_tikz/magic.py jupyter_tikz/naming.py jupyter_tikz/paths.py jupyter_tikz/save_paths.py jupyter_tikz/toolchains.py"
test = "pytest -vv --cov=jupyter_tikz"
post_test = "coverage lcov"
ci_local = "task lint_check && task type_check && task test"
readme = "python main.py"
build = "task lint && task test && task readme && poetry build"
